--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <link href="https://fonts.googleapis.com/css?family=lato:100,300,700" rel="stylesheet">
       
       <!-- for unminified version add this -->
-<link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
+<link rel="stylesheet" type="text/css" href="https://oscarlund.github.io/fonts/fonts.css" />
 <!-- for minified version add this -->
-<link rel="stylesheet" type="text/css" href="fonts/fonts.min.css" />
+<link rel="stylesheet" type="text/css" href="https://oscarlund.github.io/fonts/fonts.min.css " />
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
   </head>
