--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </p>
       </div>
       <p>
-        People are colorful, people are rare. Everyone is different, and needs a way to express emotions, culture and personality. This is a way to be yourself, and express your true identity. These are shirts, these are stories. This is <a href="https://oscarlund.github.io/waga/">SHIRTS by WÅGA.</a>
+        People are colorful, people are rare. Everyone is different, and needs a way to express emotions, culture and personality. This is a way to be yourself, and express your true identity. These are shirts, these are stories. This is <a target="_blank" rel="noreferrer" href="https://oscarlund.github.io/waga/">SHIRTS by WÅGA.</a>
       </p>
       <div class="sign-up">
         <p>
-          <i>Do you want access to the first pre-orders? Just sign up as a <a href="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1">WÅGA Member.</a> It’s free.</i>
+          <i>Do you want access to the first pre-orders? Just sign up as a <a target="_blank" rel="noreferrer" href="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1">WÅGA Member.</a> It’s free.</i>
         </p>
         <div class="container-sign-up">
             <!-- Begin MailChimp Signup Form -->
@@ -82,7 +82,7 @@
       </p>
       <div class="sign-up">
         <p>
-          <i>Do you want access to the first pre-orders? Just sign up as a <a href="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1">WÅGA Member.</a> It’s free.</i>
+          <i>Do you want access to the first pre-orders? Just sign up as a <a target="_blank" rel="noreferrer" href="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1">WÅGA Member.</a> It’s free.</i>
         </p>
         <div class="container-sign-up">
             <!-- Begin MailChimp Signup Form -->
