--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
       </div>
       <p>
-        People are colorful, people are rare. Everyone is different, and needs a way to express emotions, culture and personality. This is a way to be yourself, and express your true identity. These are shirts, these are stories. This is <a target="_blank" rel="noreferrer" href="https://oscarlund.github.io/waga/">SHIRTS by WÅGA.</a>
+        People are colorful, people are rare. Everyone is different, and needs a way to express emotions, culture and personality. This is a way to be yourself, and express your true identity. These are shirts, these are stories. This is <a href="https://oscarlund.github.io/waga/">SHIRTS by WÅGA.</a>
       </p>
       <div class="sign-up">
         <p>
