--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container-sign-up">
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
-              <form action="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <form action="http://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
               	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -87,7 +87,7 @@
         <div class="container-sign-up">
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
-              <form action="https://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <form action="http://oscarlund.us15.list-manage.com/subscribe/post?u=c7d45faaa0948b4756998c0e1&amp;id=3b605eb8f1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
