--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>SHIRTS by WÅGA</title>
       <link href="css/style.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/s/bd0iss3u75qr7ac/waga-fav-2.png" />
-      <link href="https://fonts.googleapis.com/css?family=lato:100,300,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato:100,300,700" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
   </head>
